1999-09-04  Steve Chamberlain  <sac@pobox.com>

	* dis-asm.h (print_insn_pj): Declare.

1999-07-11  Ian Lance Taylor  <ian@zembu.com>

	* ansidecl.h: Copy attribute support macros from egcs.

1999-06-22  Mark Mitchell  <mark@codesourcery.com>

	* bfdlink.h (struct bfd_link_hash_entry): Add init_function and
	fini_function.

1999-06-20  Mark Mitchell  <mark@codesourcery.com>

	* mips.h (Elf32_Internal_Msym): New structure.
	(Elf32_External_Msym): Likewise.
	(ELF32_MS_REL_INDEX): New macro.
	(ELF32_MS_FLAGS): Likewise.
	(ELF32_MS_INFO): Likewise.
	
1999-06-14  Nick Clifton  <nickc@cygnus.com>

	* dis-asm.h (arm_toggle_regnames): New prototype.
	(struct diassemble_info): New field: disassembler_options.

1999-04-11  Richard Henderson  <rth@cygnus.com>

	* bfdlink.h (bfd_elf_version_expr): Rename `match' to `pattern'.
	Add `match' callback function.

1999-04-10  Richard Henderson  <rth@cygnus.com>

	* bfdlink.h (bfd_link_info): Add no_undefined.

1999-04-08  Nick Clifton  <nickc@cygnus.com>

	* dis-asm.h: Add prototype for print_insn_mcore.

1999-04-02  Mark Mitchell  <mark@codesourcery.com>

	* splay-tree.h (splay_tree_compare_pointers): Declare.

1999-03-30  Mark Mitchell  <mark@codesourcery.com>

	* splay-tree.h (splay_tree_compare_ints): Declare.

Wed Mar 24 12:46:29 1999  Andrew Cagney  <cagney@amy.cygnus.com>

	* libiberty.h (basename): Cygwin{,32} should have the prototype.

1999-02-22  Jim Lemke  <jlemke@cygnus.com>

	* bfdlink.h (bfd_link_info): add field "mpc860c0".

Mon Feb  1 21:05:46 1999  Catherine Moore  <clm@cygnus.com>

       * dis-asm.h (print_insn_i386_att):  Declare.
       (print_insn_i386_intel):  Declare.

998-12-30  Michael Meissner  <meissner@cygnus.com>

	* dis-asm.h (INIT_DISASSEMBLE_INFO_NO_ARCH): Cast STREAM and
	FPRINTF_FUNC to avoid compiler warnings.

Wed Dec 30 16:07:14 1998  David Taylor  <taylor@texas.cygnus.com>

	* dis-asm.h: change void * to PTR (two places).

Mon Dec 14 09:53:31 1998  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
